Mon Feb 16 01:17:51 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (_CrtDbgReportW): prevent from false positive
	  assertions in msvcrtd.  [ruby-core:22116]

Sun Feb 15 21:43:44 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/ostruct.rb (OpenStruct#new_ostruct_member): checks if frozen.
	  [ruby-talk:328195], [ruby-core:22142]

Sun Feb 15 21:22:48 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/test/unit/assertions.rb (Test::Unit::Assertions): aliases
	  assert_not_ methods.

Sun Feb 15 16:57:35 2009  Tanaka Akira  <akr@fsij.org>

	* lib/securerandom.rb (SecureRandom.urlsafe_base64): new method.

Sun Feb 15 14:58:07 2009  Tanaka Akira  <akr@fsij.org>

	* hash.c (hash_i): use Murmurhash.

Sun Feb 15 11:45:29 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* variable.c (rb_define_hooked_variable): suppress false assertion
	  with VC9.  [ruby-core:22115]

Sun Feb 15 08:35:33 2009  Tanaka Akira  <akr@fsij.org>

	* test/test_pp.rb: extract from lib/pp.rb.

	* test/test_prettyprint.rb: extract from lib/prettyprint.rb.

	* test/test_tsort.rb: extract from lib/tsort.rb.

Sun Feb 15 06:34:22 2009  Tanaka Akira  <akr@fsij.org>

	* lib/time.rb (Time.parse): raise ArgumentError if Date._parse don't
	  extract date information.  [ruby-core:20912]

Sun Feb 15 04:48:08 2009  Yusuke Endoh  <mame@tsg.ne.jp>

	* string.c (rb_hash_uint32, rb_hash_uint, rb_hash_start, rb_hash_end),
	  include/ruby/intern.h: add Murmurhash API.  [ruby-dev:37784]

	* complex.c (nucomp_hash), array.c (rb_ary_hash), time.c (time_hash),
	  string.c (rb_str_hsah), object.c (rb_obj_hash), range.c
	  (range_hash), struct.c (rb_struct_hash), hash.c (rb_any_hash),
	  rational.c (nurat_hash): use Murmurhash.  [ruby-dev:37784]

Sun Feb 15 03:50:21 2009  Yusuke Endoh  <mame@tsg.ne.jp>

	* hash.c (rb_hash): always return a fixnum value because a return
	  value of rb_hash may be used as a hash value itself and bignums have
	  no unique VALUE.
