@@ -1,7 +1,14 @@
-Mon Feb 16 01:17:51 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+Mon Feb 16 16:46:14 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
-	* win32/win32.c (_CrtDbgReportW): prevent from false positive
-	  assertions in msvcrtd.  [ruby-core:22116]
+	* debug.c (set_debug_option): added rtc_error option.
+
+	* win32/Makefile.sub (CRTDEFFLAGS): separated from DEFS.
+
+	* win32/win32.c (rtc_error_handler): ignores RTC errors unless
+	  rtc_error debug option is given.
+
+	* win32/win32.c (rb_w32_sysinit): suppress useless CRT assertions.
+	  [ruby-core:22116]
 
 Sun Feb 15 21:43:44 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
